# perfect-chords

./: .gitignore  Cargo.toml  README.md  biome.json  package.json  tsconfig.json
.roo/rules/: 01-general.md
chords-builder/: index.ts
chords-builder/utils/: dummyUtil.ts
src/: lib.rs  main.rs  ui.rs
xtask/src/: main.rs
